--- a/TVSeriesNotifications/TVSeriesNotifications.csproj
+++ b/TVSeriesNotifications/TVSeriesNotifications.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="HtmlAgilityPack" Version="1.11.26" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="SafeParallelAsync" Version="0.3.0" />
+    <PackageReference Include="System.IO.Abstractions" Version="13.2.5" />
   </ItemGroup>
 
 </Project>
