--- a/TVSeriesNotifications/TVSeriesNotifications.csproj
+++ b/TVSeriesNotifications/TVSeriesNotifications.csproj
@@ -11,10 +11,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="FileCache" Version="3.3.0" />
-    <PackageReference Include="HtmlAgilityPack" Version="1.11.38" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="System.IO.Abstractions" Version="14.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TVSeriesNotifications.Domain\TVSeriesNotifications.Domain.csproj" />
+    <ProjectReference Include="..\TVSeriesNotifications.Infrastructure\TVSeriesNotifications.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
