--- a/TVSeriesNotifications.Infrastructure/TVSeriesNotifications.Infrastructure.csproj
+++ b/TVSeriesNotifications.Infrastructure/TVSeriesNotifications.Infrastructure.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="FileCache" Version="3.3.0" />
     <PackageReference Include="HtmlAgilityPack" Version="1.11.38" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="System.IO.Abstractions" Version="14.0.3" />
   </ItemGroup>
 
