--- a/TVSeriesNotifications/TVSeriesNotifications.csproj
+++ b/TVSeriesNotifications/TVSeriesNotifications.csproj
@@ -3,7 +3,8 @@
   <PropertyGroup>
      <OutputType>Exe</OutputType>
      <RuntimeIdentifier>win-x64</RuntimeIdentifier>
-     <TargetFramework>net7.0</TargetFramework>
+     <TargetFramework>net8.0</TargetFramework>
+    <EnableUnsafeBinaryFormatterSerialization>true</EnableUnsafeBinaryFormatterSerialization>
   </PropertyGroup>
 
   <ItemGroup>
@@ -11,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.IO.Abstractions" Version="19.2.69" />
+    <PackageReference Include="System.IO.Abstractions" Version="19.2.87" />
   </ItemGroup>
 
   <ItemGroup>
